@@ -10,7 +10,9 @@ import android.os.SystemProperties;
 import android.service.credentials.CredentialProviderService;
 
 import com.android.internal.gmscompat.GmcMediaProjectionService;
+import com.android.internal.gmscompat.GmsCompatApp;
 import com.android.internal.gmscompat.GmsHooks;
+import com.android.internal.gmscompat.client.GmsCorePersistentService;
 import com.android.internal.pm.pkg.component.ParsedIntentInfo;
 import com.android.internal.pm.pkg.component.ParsedPermission;
 import com.android.internal.pm.pkg.component.ParsedService;
@@ -19,7 +21,6 @@ import com.android.internal.pm.pkg.component.ParsedUsesPermissionImpl;
 import com.android.internal.pm.pkg.parsing.ParsingPackage;
 import com.android.server.LocalServices;
 
-import java.util.Collections;
 import java.util.List;
 
 class GmsCoreHooks extends PackageHooks {
@@ -106,12 +107,17 @@ class GmsCoreHooks extends PackageHooks {
 
         @Override
         public List<ParsedService> addServices(ParsingPackage pkg) {
-            ParsedServiceImpl s = createService(pkg, GmcMediaProjectionService.class.getName());
-            s.setProcessName(GmsHooks.PERSISTENT_GmsCore_PROCESS);
-            s.setForegroundServiceType(ServiceInfo.FOREGROUND_SERVICE_TYPE_MEDIA_PROJECTION);
-            s.setExported(false);
+            ParsedServiceImpl mp = createService(pkg, GmcMediaProjectionService.class.getName());
+            mp.setProcessName(GmsHooks.PERSISTENT_GmsCore_PROCESS);
+            mp.setForegroundServiceType(ServiceInfo.FOREGROUND_SERVICE_TYPE_MEDIA_PROJECTION);
+            mp.setExported(false);
 
-            return Collections.singletonList(s);
+            ParsedServiceImpl persistent = createService(pkg, GmsCorePersistentService.class.getName());
+            persistent.setDirectBootAware(true);
+            persistent.setProcessName(GmsHooks.PERSISTENT_GmsCore_PROCESS);
+            persistent.setPermission(GmsCompatApp.SIGNATURE_PROTECTED_PERMISSION);
+
+            return List.of(mp, persistent);
         }
     }
 }
